discussion/kv_engine/126160/126160_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Add support for magma GetDocs API

Change-Id: Iff70f5b8a40f00b2cf824152d0216207e2ed7ca0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-04-20 21:32:00.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-20 21:57:34.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27635/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(870): error C2039: "OperationsList": is not a member of "magma" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27635/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1805/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:870:12: error: no member named "OperationsList" in namespace "magma" [clang-diagnostic-error]
    magma::OperationsList<Magma::GetOperation> getOps;
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:870:46: error: expected "(" for function-style cast or type construction [clang-diagnostic-error]
    magma::OperationsList<Magma::GetOperation> getOps;
                                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:870:48: error: use of undeclared identifier "getOps" [clang-diagnostic-error]
    magma::OperationsList<Magma::GetOperation> getOps;
                                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:876:9: error: use of undeclared identifier "getOps" [clang-diagnostic-error]
        getOps.Add(op);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:930:46: error: use of undeclared identifier "getOps" [clang-diagnostic-error]
    auto status = magma->GetDocs(vbid.get(), getOps, cb);
                                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1805/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:870:12:
error: no member named "OperationsList" in namespace "magma" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1805/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23634/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:870:12:
error: no member named "OperationsList" in namespace "magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23634/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2285/ : FAILURE

Compile error at [2020-04-20T21:33:50.028Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:870:12:
error: no member named "OperationsList" in namespace "magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2285/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3301/ : FAILURE

Compile error at [2020-04-20T21:44:32.097Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:870:12:
error: ?OperationsList? is not a member of ?magma?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3301/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3240/ : FAILURE

Compile error at [2020-04-20T21:43:41.575Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:870:12:
error: ?OperationsList? is not a member of ?magma?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3240/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11091/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/324/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3223/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
